--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_500">#2196F3</color>
+    <color name="gray">#808080</color> <!-- Example: Medium Gray -->
+    <color name="light_gray">#D3D3D3</color> <!-- Light Gray -->
+    <color name="dark_gray">#4F4F4F</color> <!-- Dark Gray -->
+
+
 </resources>
