--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -163,9 +163,10 @@
                             app:cardCornerRadius="15dp">
 
                             <LinearLayout
+                                android:id="@+id/serverButton"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-
+                                android:background="@drawable/ripple"
                                 android:gravity="center_vertical">
 
                                 <LinearLayout
