--- a/app/src/main/res/layout/server_layout.xml
+++ b/app/src/main/res/layout/server_layout.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,6 +14,7 @@
         android:gravity="center_vertical">
 
         <ImageView
+            android:id="@+id/backButton"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginLeft="15dp"
@@ -31,6 +34,7 @@
             android:textSize="18sp" />
 
         <ImageView
+            android:id="@+id/infoButton"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginRight="15dp"
@@ -45,10 +49,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
-
         android:layout_marginRight="5dp" />
 
 </LinearLayout>
