--- a/app/src/main/res/drawable/ripple.xml
+++ b/app/src/main/res/drawable/ripple.xml
@@ -3,7 +3,7 @@
 
     <item android:id="@android:id/mask"
         >
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
 
             <solid android:color="@android:color/holo_green_light"/>
         </shape>
