--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_500">#2196F3</color>
     <color name="gray">#808080</color> <!-- Example: Medium Gray -->
     <color name="light_gray">#D3D3D3</color> <!-- Light Gray -->
+    <color name="black_x">#131011</color> <!-- Light Gray -->
     <color name="dark_gray">#4F4F4F</color> <!-- Dark Gray -->
 
 
